--- a/index.html
+++ b/index.html
@@ -9,12 +9,29 @@
 </head>
 <body>
     <main>
+        <header>
+            <div class="logo">
+                <img height="50px" src="./img/logo.png" alt="logo Boolean">
+            </div>
+            <div class="controls">
+                <label for="level">Difficoltà</label>
+                <select name="level" id="level">
+                    <option value="1">Easy</option>
+                    <option value="2">Medium</option>
+                    <option value="3">Hard</option>
+                </select>
+                <button>Play</button>
+            </div>
+        </header>
         <div class="container">
-
+                <h1>Seleziona il livello e premi Play</h1>
         </div>
 
-    </main>
 
+    </main>
+    <footer>
+        <p>Created by boolean</p>
+    </footer>
 
     <script src="./assets/js/main.js"></script>
 </body>
